Fix letter-spacing looking weird

--- a/src/app.scss
+++ b/src/app.scss
@@ -32,5 +32,5 @@ body {
 	background-repeat: no-repeat;
 	font-family: 'Anton';
 	font-weight: normal;
-	letter-spacing: 0.25ch;
+	letter-spacing: 0.125ch;
 }
